Add program day update and swap endpoints
